Deploy_ns.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api-devops
  name: api-devops
